--- a/css/checkbox.css
+++ b/css/checkbox.css
@@ -20,22 +20,23 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 18px;
-    height: 18px;
+    width: 22px;
+    height: 22px;
     border: 1px solid #ddd;
     border-radius: 100%;
     background: #fff;
+    border-width: 2px;
 }
 
 [type="radio"]:checked+label:after,
 [type="radio"]:not(:checked)+label:after {
     content: '';
-    width: 12px;
-    height: 12px;
+    width: 16.5px;
+    height: 16.5px;
     background: #16a085;
     position: absolute;
-    top: 3px;
-    left: 3.5px;
+    top: 2.7px;
+    left: 2.9px;
     border-radius: 100%;
     -webkit-transition: all 0.2s ease;
     transition: all 0.2s ease;
